force-app/main/default/objects/CongaURL_Settings__c/CongaURL_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CongaURL_Settings</label>
</CustomObject>