force-app/main/default/objects/CongaURL_Settings__c/fields/AD__c.field-meta.xml
<CustomField>
    <fullName>AD__c</fullName>
    <label>AD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>