force-app/main/default/objects/CongaURL_Settings__c/fields/BillofSale__c.field-meta.xml
<CustomField>
    <fullName>BillofSale__c</fullName>
    <defaultValue>&quot;a2e0v0000001ih5&quot;</defaultValue>
    <label>BillofSale</label>
    <length>25</length>
    <type>Text</type>
</CustomField>