force-app/main/default/objects/CongaURL_Settings__c/fields/BillofSaleTemplate__c.field-meta.xml
<CustomField>
    <fullName>BillofSaleTemplate__c</fullName>
    <label>BillofSaleTemplate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>