force-app/main/default/objects/CongaURL_Settings__c/fields/BoSAdd__c.field-meta.xml
<CustomField>
    <fullName>BoSAdd__c</fullName>
    <description>Bill of Sale Buyer Address</description>
    <label>BoSAdd</label>
    <length>30</length>
    <type>Text</type>
</CustomField>