force-app/main/default/objects/CongaURL_Settings__c/fields/Comm_TempID__c.field-meta.xml
<CustomField>
    <fullName>Comm_TempID__c</fullName>
    <label>Comm TempID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>