force-app/main/default/objects/CongaURL_Settings__c/fields/CreditQryID__c.field-meta.xml
<CustomField>
    <fullName>CreditQryID__c</fullName>
    <label>CreditQryID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>