force-app/main/default/objects/CongaURL_Settings__c/fields/CreditTmpID__c.field-meta.xml
<CustomField>
    <fullName>CreditTmpID__c</fullName>
    <label>CreditTmpID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>