force-app/main/default/objects/CongaURL_Settings__c/fields/DandAEQID__c.field-meta.xml
<CustomField>
    <fullName>DandAEQID__c</fullName>
    <label>DandAEQID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>