force-app/main/default/objects/CongaURL_Settings__c/fields/DandAQryID__c.field-meta.xml
<CustomField>
    <fullName>DandAQryID__c</fullName>
    <label>DandAQryID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>