force-app/main/default/objects/CongaURL_Settings__c/fields/DandATmpID__c.field-meta.xml
<CustomField>
    <fullName>DandATmpID__c</fullName>
    <label>DandATmpID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>