force-app/main/default/objects/CongaURL_Settings__c/fields/Days_Prior_to_Maturity_60__c.field-meta.xml
<CustomField>
    <fullName>Days_Prior_to_Maturity_60__c</fullName>
    <label>Days Prior to Maturity 60</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>