force-app/main/default/objects/CongaURL_Settings__c/fields/DetailwithoutTempId__c.field-meta.xml
<CustomField>
    <fullName>DetailwithoutTempId__c</fullName>
    <label>DetailwithoutTempId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>