force-app/main/default/objects/CongaURL_Settings__c/fields/DetailwithTempId__c.field-meta.xml
<CustomField>
    <fullName>DetailwithTempId__c</fullName>
    <label>DetailwithTempId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>