force-app/main/default/objects/CongaURL_Settings__c/fields/DueDetailsLines__c.field-meta.xml
<CustomField>
    <fullName>DueDetailsLines__c</fullName>
    <label>DueDetailsLines</label>
    <length>30</length>
    <type>Text</type>
</CustomField>