force-app/main/default/objects/CongaURL_Settings__c/fields/Equipment_contact__c.field-meta.xml
<CustomField>
    <fullName>Equipment_contact__c</fullName>
    <label>Equipment contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>