force-app/main/default/objects/CongaURL_Settings__c/fields/FinalNoticeLetterCongaEmailTemplateID__c.field-meta.xml
<CustomField>
    <fullName>FinalNoticeLetterCongaEmailTemplateID__c</fullName>
    <label>FinalNoticeLetterCongaEmailTemplateID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>