force-app/main/default/objects/CongaURL_Settings__c/fields/FinalNoticeLetterCongaFromID__c.field-meta.xml
<CustomField>
    <fullName>FinalNoticeLetterCongaFromID__c</fullName>
    <label>FinalNoticeLetterCongaFromID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>