force-app/main/default/objects/CongaURL_Settings__c/fields/FinalNoticeLetterCongaTemplateID__c.field-meta.xml
<CustomField>
    <fullName>FinalNoticeLetterCongaTemplateID__c</fullName>
    <label>FinalNoticeLetterCongaTemplateID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>