force-app/main/default/objects/CongaURL_Settings__c/fields/FinalNoticeLetterCongQueryID__c.field-meta.xml
<CustomField>
    <fullName>FinalNoticeLetterCongQueryID__c</fullName>
    <label>FinalNoticeLetterCongQueryID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>