force-app/main/default/objects/CongaURL_Settings__c/fields/FinanceFee__c.field-meta.xml
<CustomField>
    <fullName>FinanceFee__c</fullName>
    <label>FinanceFee</label>
    <length>30</length>
    <type>Text</type>
</CustomField>