force-app/main/default/objects/CongaURL_Settings__c/fields/INSFEE__c.field-meta.xml
<CustomField>
    <fullName>INSFEE__c</fullName>
    <label>INSFEE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>