force-app/main/default/objects/CongaURL_Settings__c/fields/InterimRent__c.field-meta.xml
<CustomField>
    <fullName>InterimRent__c</fullName>
    <label>InterimRent</label>
    <length>30</length>
    <type>Text</type>
</CustomField>