force-app/main/default/objects/CongaURL_Settings__c/fields/INV__c.field-meta.xml
<CustomField>
    <fullName>INV__c</fullName>
    <label>INV</label>
    <length>25</length>
    <type>Text</type>
</CustomField>