force-app/main/default/objects/CongaURL_Settings__c/fields/InvoiceEverGreenTempID__c.field-meta.xml
<CustomField>
    <fullName>InvoiceEverGreenTempID__c</fullName>
    <label>InvoiceEverGreenTempID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>