force-app/main/default/objects/CongaURL_Settings__c/fields/InvTempId__c.field-meta.xml
<CustomField>
    <fullName>InvTempId__c</fullName>
    <label>InvTempId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>