force-app/main/default/objects/CongaURL_Settings__c/fields/LateFee__c.field-meta.xml
<CustomField>
    <fullName>LateFee__c</fullName>
    <label>LateFee</label>
    <length>30</length>
    <type>Text</type>
</CustomField>