force-app/main/default/objects/CongaURL_Settings__c/fields/LeaseEQID__c.field-meta.xml
<CustomField>
    <fullName>LeaseEQID__c</fullName>
    <label>LeaseEQID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>