force-app/main/default/objects/CongaURL_Settings__c/fields/LeaseQryID__c.field-meta.xml
<CustomField>
    <fullName>LeaseQryID__c</fullName>
    <label>LeaseQryID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>