force-app/main/default/objects/CongaURL_Settings__c/fields/LeaseTmpID__c.field-meta.xml
<CustomField>
    <fullName>LeaseTmpID__c</fullName>
    <label>LeaseTmpID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>