force-app/main/default/objects/CongaURL_Settings__c/fields/MutipleStatesCommTempID__c.field-meta.xml
<CustomField>
    <fullName>MutipleStatesCommTempID__c</fullName>
    <label>MutipleStatesCommTempID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>