force-app/main/default/objects/CongaURL_Settings__c/fields/OrigFee__c.field-meta.xml
<CustomField>
    <fullName>OrigFee__c</fullName>
    <label>OrigFee</label>
    <length>30</length>
    <type>Text</type>
</CustomField>