force-app/main/default/objects/CongaURL_Settings__c/fields/Quote_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Quote_Equipment__c</fullName>
    <label>Quote Equipment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>