force-app/main/default/objects/CongaURL_Settings__c/fields/Quote_Header__c.field-meta.xml
<CustomField>
    <fullName>Quote_Header__c</fullName>
    <label>Quote Header</label>
    <length>30</length>
    <type>Text</type>
</CustomField>