force-app/main/default/objects/CongaURL_Settings__c/fields/Specific_RI_TempID__c.field-meta.xml
<CustomField>
    <fullName>Specific_RI_TempID__c</fullName>
    <label>Specific RI TempID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>