force-app/main/default/objects/CongaURL_Settings__c/fields/States_Prior_to_Maturity_RI_120__c.field-meta.xml
<CustomField>
    <fullName>States_Prior_to_Maturity_RI_120__c</fullName>
    <label>States Prior to Maturity RI 120</label>
    <length>2</length>
    <type>Text</type>
</CustomField>