force-app/main/default/objects/CongaURL_Settings__c/fields/Summary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Summary_Quote__c</fullName>
    <label>Summary Quote</label>
    <length>30</length>
    <type>Text</type>
</CustomField>