force-app/main/default/objects/CongaURL_Settings__c/fields/SumwithoutTempID__c.field-meta.xml
<CustomField>
    <fullName>SumwithoutTempID__c</fullName>
    <label>SumwithoutTempID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>