force-app/main/default/objects/CongaURL_Settings__c/fields/SumwithTempID__c.field-meta.xml
<CustomField>
    <fullName>SumwithTempID__c</fullName>
    <label>SumwithTempID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>